--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 {% include base_path %}
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
