--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -74,7 +74,16 @@
   }
 }
 
-.archive__item:hover {
+.archive__item{
+  position: relative;
+  margin-bottom: var(--gap);
+  padding: var(--gap);
+  background: var(--entry);
+  border-radius: var(--radius);
+  transition: transform .1s;
+  border: 1px solid var(--border);
+
+  &:hover {
   .archive__item-teaser {
     box-shadow: 0 0 10px rgba(#000, 0.25);
   }
@@ -82,6 +91,7 @@
   .archive__item-title {
     text-decoration: underline;
   }
+}
 }
 
 
